--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,16 @@
     "noEmit": true,
     "jsx": "react"
   },
+  "exclude": [
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts",
+    "src/setupTests.js"
+  ],
   "include": [
     "src"
   ]
